bin_PROGRAMS = genidl

genidl_SOURCES = \
  src/genidl_cfg.h     src/genidl_typinfo.h  src/genidl_typeinfo.h  src/genidl_readpe.h \
  src/genidl_config.c  src/genidl_typinfo.c  src/genidl_typeinfo.c  src/genidl_readpe.c \
  src/genidl_dumpidl.c \
  src/genidl.c
genidl_CFLAGS = -O3 -g -Wall -Wextra -Wshadow

